--- a/server/pom.xml
+++ b/server/pom.xml
@@ -29,6 +29,12 @@
 			<version>0.3.1-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-servlet</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+
         <dependency>
             <groupId>com.developmentontheedge.be5</groupId>
             <artifactId>be5-inject</artifactId>
