--- a/dbms/pom.xml
+++ b/dbms/pom.xml
@@ -22,6 +22,12 @@
    <version>4.12</version>
    <scope>test</scope>
   </dependency>
+  <dependency>
+   <groupId>org.zapodot</groupId>
+   <artifactId>embedded-db-junit</artifactId>
+   <version>1.0.0</version>
+   <scope>test</scope>
+  </dependency>
  </dependencies>
 
  <build>
