--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
   <module>server</module>
   <module>maven</module>
   <module>modules/core</module>
+  <module>base</module>
  </modules>
 
  <distributionManagement>
@@ -37,6 +38,8 @@
 
  <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  <maven.compiler.source>1.8</maven.compiler.source>
+  <maven.compiler.target>1.8</maven.compiler.target>
   <java.version>1.8</java.version>
   <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
  </properties>
