add operation module, refactor dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   <module>maven</module>
   <module>modules/core</module>
   <module>base</module>
+  <module>operation</module>
  </modules>
 
  <distributionManagement>
