--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,6 +23,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.developmentontheedge.be5</groupId>
+			<artifactId>be5-query</artifactId>
+			<version>0.0.3-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.developmentontheedge</groupId>
 			<artifactId>beans-json</artifactId>
 			<version>1.0.1-SNAPSHOT</version>
