--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ before_install:
     && mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     && cd ../
 install:
-  - mvn test -B -Dmaven.javadoc.skip=true
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test org.jacoco:jacoco-maven-plugin:report -B -Dmaven.javadoc.skip=true
 after_success:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test org.jacoco:jacoco-maven-plugin:report org.eluder.coveralls:coveralls-maven-plugin:report
+  - mvn org.eluder.coveralls:coveralls-maven-plugin:report
 jdk:
   - oraclejdk8
 cache:
