--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
   <module>base</module>
   <module>operation</module>
   <module>query</module>
+  <module>database-model</module>
  </modules>
 
  <distributionManagement>
