stub be5-web, refactoring - remove UserInfoHolder from ErrorModel, ResponseImpl

--- a/pom.xml
+++ b/pom.xml
@@ -11,17 +11,18 @@
 
  <modules>
   <module>database</module>
+  <module>freemarker-patched</module>
   <module>dbms</module>
   <module>sql</module>
-  <module>freemarker-patched</module>
   <module>metadata</module>
-  <module>server</module>
   <module>maven</module>
-  <module>modules/core</module>
   <module>base</module>
   <module>operation</module>
   <module>query</module>
   <module>database-model</module>
+  <module>web</module>
+  <module>server</module>
+  <module>modules/core</module>
  </modules>
 
  <distributionManagement>
