add test module

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -72,6 +72,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.developmentontheedge.be5</groupId>
+			<artifactId>be5-test</artifactId>
+			<version>0.0.3-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
