--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
   <module>web</module>
   <module>server</module>
   <module>modules/core</module>
+  <module>modules/system</module>
   <module>test</module>
  </modules>
 
