--- a/base/pom.xml
+++ b/base/pom.xml
@@ -21,6 +21,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.developmentontheedge</groupId>
+            <artifactId>beans-json</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
             <version>2.5.3</version>
