rename module test - test-base

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   <module>metadata</module>
   <module>maven</module>
   <module>base</module>
+  <module>test-base</module>
   <module>operation</module>
   <module>query</module>
   <module>database-model</module>
@@ -24,7 +25,6 @@
   <module>server</module>
   <module>modules/core</module>
   <module>modules/system</module>
-  <module>test</module>
  </modules>
 
  <distributionManagement>
