--- a/test-base/pom.xml
+++ b/test-base/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>be5 test</name>
-    <artifactId>be5-test</artifactId>
+    <name>be5 test base</name>
+    <artifactId>be5-test-base</artifactId>
 
     <parent>
         <artifactId>be5</artifactId>
