move test package - to new test module

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
   <module>server</module>
   <module>modules/core</module>
   <module>modules/system</module>
+  <module>test</module>
  </modules>
 
  <distributionManagement>
