--- a/modules/system/pom.xml
+++ b/modules/system/pom.xml
@@ -37,18 +37,12 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.4.193</version>
+			<groupId>com.developmentontheedge.be5</groupId>
+			<artifactId>be5-test</artifactId>
+			<version>0.0.3-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
