--- a/server/pom.xml
+++ b/server/pom.xml
@@ -62,29 +62,14 @@
 			<groupId>com.developmentontheedge.be5</groupId>
 			<artifactId>be5-test-base</artifactId>
 			<version>0.0.3-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.19</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>com.developmentontheedge.be5</groupId>
 			<artifactId>be5-maven-plugin</artifactId>
 			<version>0.1.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.developmentontheedge.be5</groupId>
-			<artifactId>be5-base</artifactId>
-			<version>0.0.3-SNAPSHOT</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
