--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -64,6 +64,12 @@
 			<version>1.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.193</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
