--- a/operation/src/test/resources/src/meta/entities/testtable.yaml
+++ b/operation/src/test/resources/src/meta/entities/testtable.yaml
@@ -26,6 +26,7 @@ testtable:
       - InsertWithExtender
       - InsertWithSkipExtender
       - InsertWithGroovyExtender
+      - DateTimeTestOperation
       code: |-
         SELECT
           t.name AS "Name",
@@ -129,13 +130,6 @@ testtable:
       type: Groovy
       roles: Administrator
       file: testtableAdmin/OldRedirectFilter.groovy
-  - Edit:
-      records: 1
-      roles: Administrator
-      code: com.developmentontheedge.be5.server.operations.SilentEditOperation
-  - Insert:
-      roles: Administrator
-      code: com.developmentontheedge.be5.server.operations.SilentInsertOperation
   - InsertWithExtender:
       roles: Administrator
       extenders:
@@ -155,3 +149,6 @@ testtable:
       type: Groovy
       roles: Administrator
       file: testtableAdmin/CustomOperation.groovy
+  - DateTimeTestOperation:
+      roles: Administrator
+      code: com.developmentontheedge.be5.operation.test.DateTimeTestOperation
