--- a/dbms/pom.xml
+++ b/dbms/pom.xml
@@ -17,6 +17,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+      <version>1.4</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
