--- a/database/pom.xml
+++ b/database/pom.xml
@@ -58,12 +58,11 @@
     </dependency>
 
     <dependency>
-      <groupId>org.zapodot</groupId>
-      <artifactId>embedded-db-junit</artifactId>
-      <version>1.0.0</version>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.193</version>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 
   <build>
