--- a/query/src/test/resources/project.yaml
+++ b/query/src/test/resources/project.yaml
@@ -8,6 +8,7 @@ queryTestProject:
   - testtableAdmin
   - testSubQuery
   - testTags
+  - filterTestTable
   scripts:
   - Post-db
   - dictionaries
