--- a/base/src/test/resources/src/daemons.yaml
+++ b/base/src/test/resources/src/daemons.yaml
@@ -1,1 +1,6 @@
-daemons: {}
+daemons:
+  TestDeamon:
+    className: path.to.Daemon
+    configSection: MetaTestDaemon
+    daemonType: periodic
+    description: Meta test daemon
