--- a/modules/core/src/test/resources/src/daemons.yaml
+++ b/modules/core/src/test/resources/src/daemons.yaml
@@ -1,6 +1,6 @@
 daemons:
   TestDeamon:
-    className: com.developmentontheedge.be5.server.services.process.TestDaemon
+    className: com.developmentontheedge.be5.modules.core.services.impl.scheduling.TestDaemon
     configSection: TestDaemon
     daemonType: periodic
     description: Test daemon
