--- a/base/pom.xml
+++ b/base/pom.xml
@@ -21,6 +21,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.developmentontheedge.be5</groupId>
+      <artifactId>be5-database</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.developmentontheedge</groupId>
       <artifactId>beans-json</artifactId>
       <version>1.0.1-SNAPSHOT</version>
@@ -69,9 +75,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.developmentontheedge.be5</groupId>
-      <artifactId>be5-database</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4.3</version>
     </dependency>
 
     <dependency>
