fixes selectedRows, add utils paramsWithoutSelectedRows(), move utils methods to BaseOperationSupport

--- a/operation/src/test/resources/src/meta/entities/testtableAdmin.yaml
+++ b/operation/src/test/resources/src/meta/entities/testtableAdmin.yaml
@@ -21,6 +21,7 @@ testtableAdmin:
       roles: Administrator
       operations:
       - TestOperation
+      - TestOperation1
       - TestGroovyOp
       - OperationWithExtend
       - OperationWithExtend2
@@ -77,6 +78,10 @@ testtableAdmin:
               testtableAdmin t
   operations:
   - TestOperation:
+      roles: Administrator
+      code: com.developmentontheedge.be5.operation.test.TestOperation
+  - TestOperation1:
+      records: 1
       roles: Administrator
       code: com.developmentontheedge.be5.operation.test.TestOperation
   - TestOperationProperty:
